[To rel/0.11] Cherry pick Windows start-up script fixes